--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+-- 1.1.4 (2018-10-10)
+Improved DB queue status reporting
+Fix potential shutdown race condition
+Update usge text to include -v option for version output
+Upgrade DB handling to use a connection pool
+Fix debug build mode
+Fix IPv4/IPv6 peer accounting performance issues
+
 -- 1.1.3 (2018-10-01)
 Update user loading SQL query
 Fix logger file handling
